--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "require": {
         "predis/predis": "^1.1",
         "swiftmailer/swiftmailer": "^6.1",
-        "yansongda/pay": "^2.4"
+        "yansongda/pay": "^2.4",
+        "endroid/qr-code": "^3.2",
+        "phpoffice/phpspreadsheet": "^1.3"
     }
 }
